force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_student_placements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_student_placements__c</fullName>
    <label>LTU Student Placements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involved/potential</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>