force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_LTU_student_researchers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LTU_student_researchers__c</fullName>
    <label>LTU Student Researchers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No-As employee only</fullName>
            </value>
            <value>
                <fullName>Yes-As part of course/PhD</fullName>
            </value>
            <value>
                <fullName>Yes-As employee AND part course/PhD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>