force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Material_transfer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Material_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Transfer</label>
    <type>Checkbox</type>
</CustomField>