force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Materials_equipment_transfer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Materials_equipment_transfer__c</fullName>
    <label>Materials/Equipment Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transferring from LTU</fullName>
            </value>
            <value>
                <fullName>Transferring to LTU only</fullName>
            </value>
            <value>
                <fullName>None to be transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>