force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Moral_rights_specified_acts__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Moral_rights_specified_acts__c</fullName>
    <label>Moral Rights/Specified Acts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent required-accepted by all LTU authors</fullName>
            </value>
            <value>
                <fullName>No consents required by contract</fullName>
            </value>
            <value>
                <fullName>Advice or amendments required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>