force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_N_A_different_contract_required__c.field-meta.xml
<CustomField>
    <fullName>I_RS_N_A_different_contract_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N/A, Different Contract Required</label>
    <type>Checkbox</type>
</CustomField>