force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Non_binding_MOU__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Non_binding_MOU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Binding MOU</label>
    <type>Checkbox</type>
</CustomField>