force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Other__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>