force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Other_approvals_obtained__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_approvals_obtained__c</fullName>
    <label>Other Approvals Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>