force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Other_Party_ies2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Party_ies2__c</fullName>
    <label>Other Party/ies</label>
    <type>TextArea</type>
</CustomField>