force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Other_Party_ies_2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Party_ies_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Funding Body&apos;s Full Legal Name</inlineHelpText>
    <label>Other Party/ies</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>La Trobe Organisation Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Checklists</relationshipLabel>
    <relationshipName>Legal_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>