force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Overseas_institutions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Overseas_institutions__c</fullName>
    <label>Overseas Institutions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes on this contract</fullName>
            </value>
            <value>
                <fullName>Yes seeking advice</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>