force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Overseas_services_travel__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Overseas_services_travel__c</fullName>
    <label>Overseas Services/Travel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-LTU</fullName>
            </value>
            <value>
                <fullName>Yes-other party</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>