force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Potentially_valuable_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Potentially_valuable_IP__c</fullName>
    <label>Potentially Valuable IP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed no potentially valuable IP to be used or created</fullName>
            </value>
            <value>
                <fullName>Yes-another party to this contract will own-LTU will have no interest and this is acceptable</fullName>
            </value>
            <value>
                <fullName>Yes-LTU existing IP to be used-addressed in the contract</fullName>
            </value>
            <value>
                <fullName>Yes-LTU existing IP to be used-seeking advice or amendments</fullName>
            </value>
            <value>
                <fullName>Yes-potential new valuable IP with LTU interest-addressed in contract and this is acceptable</fullName>
            </value>
            <value>
                <fullName>Yes-potential new valuable IP with LTU interest-seeking advice or amendments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>