force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Project_committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_committee__c</fullName>
    <label>Project Committee</label>
    <type>TextArea</type>
</CustomField>