force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_project_description_and_protocol__c.field-meta.xml
<CustomField>
    <fullName>I_RS_project_description_and_protocol__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Project Description And Protocol</inlineHelpText>
    <label>Project Description And Protocol</label>
    <type>Checkbox</type>
</CustomField>