force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Project_IP_New_or_Improved_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_IP_New_or_Improved_IP__c</fullName>
    <formula>TEXT(I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_IP_Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project IP (New or Improved IP)</label>
    <type>Text</type>
</CustomField>