force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Project_protocol__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_protocol__c</fullName>
    <label>Project protocol</label>
    <type>TextArea</type>
</CustomField>