force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Project_services_protocol__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_services_protocol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project/Services Protocol</label>
    <type>Checkbox</type>
</CustomField>