force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Title__c</fullName>
    <formula>I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>