force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Publication__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publication__c</fullName>
    <formula>TEXT(I_RS_Agreement_Title__r.I_RS_Project_Proposal__r.I_RS_Publishing_Rights__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication</label>
    <type>Text</type>
</CustomField>