force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Publicity_acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publicity_acknowledgment__c</fullName>
    <label>Publicity/Acknowledgment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract requirements acceptable</fullName>
            </value>
            <value>
                <fullName>No restrictions in contract-acceptable</fullName>
            </value>
            <value>
                <fullName>Advice or amendments required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>