force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchasing</label>
    <type>Checkbox</type>
</CustomField>