force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Related_agreement_s__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_agreement_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Agreement(s)</label>
    <type>Checkbox</type>
</CustomField>