force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Related_agreements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_agreements__c</fullName>
    <label>Related Agreements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-copy supplied</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>