force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_reporting_requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_reporting_requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Requirements</label>
    <type>Checkbox</type>
</CustomField>