force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Representative_Email__c</fullName>
    <label>Representative Email</label>
    <type>Email</type>
</CustomField>