force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Representative_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Representative_Phone__c</fullName>
    <label>Representative Phone</label>
    <type>Phone</type>
</CustomField>