force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Representative_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Representative_Title__c</fullName>
    <label>Representative Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>