force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Research_Contracts_Guide__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Contracts_Guide__c</fullName>
    <defaultValue>&quot;Consulted Research Contracts Guide&quot; &amp; &quot; &quot; &amp;
&quot;(https://www.latrobe.edu.au/legalservices/research-contracts)&quot; &amp; &quot; &quot; &amp;
&quot;where clarification required?&quot;</defaultValue>
    <label>Research Contracts Guide</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>