force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Schedules_attachments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Schedules_attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedules/Attachments</label>
    <type>Checkbox</type>
</CustomField>