force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Scholarship_or_placement__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Scholarship_or_placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Or Placement</label>
    <type>Checkbox</type>
</CustomField>