force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsorship</label>
    <type>Checkbox</type>
</CustomField>