force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Teaching_services__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Teaching_services__c</fullName>
    <label>Teaching Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-LTU teaching</fullName>
            </value>
            <value>
                <fullName>Yes-other party</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>