force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Third_party_IP__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Third_party_IP__c</fullName>
    <label>Third Party IP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None to be used</fullName>
            </value>
            <value>
                <fullName>Yes-IP of another party to this contract to be used-ownership &amp; licences acceptable</fullName>
            </value>
            <value>
                <fullName>Yes-external party&apos;s IP to be used and LTU has all necessary rights/licences to use and warrant this</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>