force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Time_s_for_payment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Time_s_for_payment__c</fullName>
    <label>Time(s) For Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>