force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Transfer_novation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Transfer_novation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer/Novation</label>
    <type>Checkbox</type>
</CustomField>