force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Value__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>