force-app/main/default/objects/Legal_Checklist__c/fields/I_RS_Vulnerable_persons__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Vulnerable_persons__c</fullName>
    <label>Vulnerable Persons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involved</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>