force-app/main/default/objects/Legal_Checklist__c/recordTypes/I_RS_Research_Contract_Review.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Research_Contract_Review</fullName>
    <active>true</active>
    <label>Research Contract Review</label>
</RecordType>