force-app/main/default/objects/Legal_Checklist__c/recordTypes/Research_Contract_Drafting_Request.recordType-meta.xml
<RecordType>
    <fullName>Research_Contract_Drafting_Request</fullName>
    <active>true</active>
    <label>Research Contract Drafting Request</label>
</RecordType>